--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = '1.3.5' %}
-
+{% set version = '1.3.6' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,52 +7,66 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: timsac_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/timsac_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/timsac/timsac_{{ version }}.tar.gz
-
-  sha256: 4052135ffe0dd49b67385c9fe123586acef930f07a8829015fd095847fe44edc
+    - {{ cran_mirror }}/src/contrib/timsac_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/timsac/timsac_{{ version }}.tar.gz
+  sha256: 8fde280e3d2db81316990f3b9afeeba621624d80eb09deae9b432635710ac9a0
 
 build:
   merge_build_host: True  # [win]
-  number: 1001
-  skip: true  # [win32]
-
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('fortran') }}        # [unix]
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('fortran') }}        # [not win]
     - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
 
 test:
   commands:
-    - $R -e "library('timsac')"  # [not win]
+    - $R -e "library('timsac')"           # [not win]
     - "\"%R%\" -e \"library('timsac')\""  # [win]
 
 about:
   home: https://CRAN.R-project.org/package=timsac
   license: GPL (>= 2)
-  summary: Functions for statistical analysis, prediction and control of time series.
+  summary: Functions for statistical analysis, prediction and control of time series based mainly
+    on Akaike and Nakagawa (1988) <ISBN 978-90-277-2786-2>.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
+
 extra:
-   recipe-maintainers:
+  recipe-maintainers:
+    - conda-forge/r
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
-    - Johanneskoester
-    - Bgruening
-    - Daler
-    - Jdblischak
+
+# Package: timsac
+# Version: 1.3.6
+# Title: Time Series Analysis and Control Package
+# Author: The Institute of Statistical Mathematics
+# Maintainer: Masami Saga <msaga@mtb.biglobe.ne.jp>
+# Depends: R (>= 3.0.0)
+# Imports: graphics, grDevices, stats
+# Description: Functions for statistical analysis, prediction and control of time series based mainly on Akaike and Nakagawa (1988) <ISBN 978-90-277-2786-2>.
+# License: GPL (>= 2)
+# MailingList: Please send bug reports to ismrp@jasp.ism.ac.jp.
+# NeedsCompilation: yes
+# Packaged: 2018-03-06 07:35:07 UTC; msaga
+# Repository: CRAN
+# Date/Publication: 2018-03-06 15:54:00 UTC
